# CGame

./: CMakeLists.txt  README.md  make.sh  pipu.sh  run.sh
engine/core/: camera.c  camera.h  game.c  game.h  renderer.c  renderer.h
engine/entity/: entity.h
engine/gui/: button.c  button.h
engine/level/: level.c
engine/physic/: physic.c  physic.h
engine/scene/: scene.h
engine/shaders/: basic.fs  basic.vs
src/: main.c
src/engine/core/: app.c  app.h  game.c
src/engine/level/: level.c  level.h  model_cache.c  model_cache.h
src/engine/render/: camera.c  camera.h
src/game/entities/: floor.c  player.c  player.h
src/game/scenes/: gameplay_scene.c  menu_scene.c
test/: light.c  model_load.c
